# bus-factor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
binary/: Cargo.toml
binary/src/: main.rs
src/: args.rs  calculate.rs  client.rs  environment.rs  errors.rs  main.rs  model.rs
tests/: integration.rs
