[package]
name = "bus-factor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"  # ergonomic wrapper around clap, command line arg parsing
microtype = "0.4"  # wrapper around sensitive data for type safety and better secret handling
secrecy = "0.8"    # secret handling
error-chain = "0.12"

tokio = { version = "1", features = ["full"] }
futures = "0.3"  
async-trait = "0.1"

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0" 	
